--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=eureka-service
 
 eureka.instance.preferIpAddress=true
 
-eureka.client.service-url.defaultZone=http://173.18.0.22:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
